[package]
name = "raw-validation-policy"
version = "0.1.0"
authors = ["Fabrizio Sestito <fabrizio.sestito@suse.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
kubewarden-policy-sdk = { version = "0.15", default-features = false }
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
slog = "2.7"
